@@ -82,6 +82,10 @@ tasks.test {
         "org.bytedeco.javacpp.cachedir",
         layout.buildDirectory.dir("javacpp-cache").get().asFile.absolutePath,
     )
+
+    if (this.javaVersion >= JavaVersion.VERSION_25) {
+        jvmArgs("--enable-native-access=javafx.graphics")
+    }
 }
 
 val dav1dCommit = "c5726277ffa8764665ea08f865e46912a41f2309"
